--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,8 @@
 name: create daily docker image on develop
 on:
   workflow_dispatch:
-  schedule:
-   - cron: "0 2 * * *"
+  #schedule:
+  # - cron: "0 2 * * *"
 jobs:
   publish-docker-develop-image:
     runs-on: ubuntu-latest
